Initial Commit Week1 Assigment

--- a/index.html
+++ b/index.html
@@ -3,8 +3,21 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset="utf-8">
 	<title>My Website</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<style type="text/css"></style>
+		<style>
+		.floating-box {
+    	float: left;
+    	width: 150px;
+    	height: 75px;
+    	margin: 10px;
+    	border: 3px solid #73AD21;  
+		}
+		.after-box {
+    	clear: left;
+    	border: 3px solid red;      
+		}
+	</style>
 </head>
 <body> 
 
@@ -29,29 +42,28 @@
 		<section id="divAbout">
 			<h2 style ="color:#4aaaa5">About Me</h2>
   			<img src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/p/3/000/01d/245/0b3d41c.jpg">
-        	<p>One of the best technical resources on the team. Her vast knowledge has proven very instrumental in getting issues resolved much faster. She continues learning other systems and has little to no trouble working with systems outside of her core abilities. She is innovative, creative, and looks for solutions and for opportunities to improve the methods of performing job duties.</p>
+        	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna sit amet purus gravida quis blandit. Neque aliquam vestibulum morbi blandit cursus risus at. Et netus et malesuada fames. Id interdum velit laoreet id donec ultrices. Est pellentesque elit ullamcorper dignissim cras. Blandit cursus risus at ultrices. Nunc sed id semper risus in hendrerit. Consequat semper viverra nam libero justo laoreet. Adipiscing elit pellentesque habitant morbi tristique senectus et. Et tortor at risus viverra adipiscing at. Velit dignissim sodales ut eu sem integer. Morbi tristique senectus et netus et malesuada fames. Nam aliquam sem et tortor consequat. Fermentum leo vel orci porta. Malesuada bibendum arcu vitae elementum curabitur vitae nunc sed velit. Aliquet eget sit amet tellus cras adipiscing.</p>
 		</section>
-		
 		<section id="divConnectWithMe">
         	<h3 style ="color:#4aaaa5">Connect with Me</h3>
         	
-        	<div class="floating-box"><a href="https://github.com/"><img border="0" alt="github" src="images/github-mark.png" width="100" height="75">
+        	<div class="floating-box"><a href="https://github.com/"><img border="0" alt="github" src="assets/images/github-mark.png" width="100" height="75">
 			</div>
 			
-			<div class="floating-box"><a href="https://www.linkedin.com/"><img border="0" alt="linkedin" src="images/linkedinlogo.png" width="100" height="75">
+			<div class="floating-box"><a href="https://www.linkedin.com/"><img border="0" alt="linkedin" src="assets/images/linkedinlogo.png" width="100" height="75">
 			</div>
 			
-			<div class="floating-box"><a href="https://stackoverflow.com/"><img border="0" alt="stackoverflow" src="images/stackoverflow.png" width="100" height="75">
+			<div class="floating-box"><a href="https://stackoverflow.com/"><img border="0" alt="stackoverflow" src="assets/images/stackoverflow.png" width="100" height="75">
 			</div>
   		
   		</section>
 	</div>
-	
-	<div id="divFooter">
-		<p>&copy; Copyright 2017 Marsha Miquela<p>
-	</div>
+
+    <div id="divFooter">
+      <p>&copy; Copyright 2017 Marsha Miquela</p>
+    </div>
+  </div>
 </div>
-	
-	
+  
 </body>
 </html>
